--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: DAST-scan
 
 # Controls when the workflow will run
 on:
@@ -9,9 +9,6 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -27,4 +24,6 @@ jobs:
           
       - name: OWASP ZAP Full Scan
         uses: zaproxy/action-full-scan@v0.3.0
+        with: 
+          target: 'https://google.com'
 
