--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
           
       - name: OWASP ZAP Full Scan
-        uses: zaproxy/action-full-scan@v0.3.0
+        uses: zaproxy/action-baseline@v0.3.0
         with: 
-          target: 'https://google.com'
+          target: 'https://google.com/'
 
