--- a/.github/workflows/zap.yml
+++ b/.github/workflows/zap.yml
@@ -25,5 +25,5 @@ jobs:
       - name: OWASP ZAP Full Scan
         uses: zaproxy/action-baseline@v0.3.0
         with: 
-          target: 'https://google.com/'
+          target: 'https://sharechat.com/'
 
